test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_nested_in_declaration.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: ptr
        None: 
        Pointer: 
          Array: 
            TLong: 3
            Array: 
              TLong: 4
              Void: 
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: ptr
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Void: 
        None: 
